--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,27 @@ body {
   background: radial-gradient(circle, rgb(117, 117, 117) 0%, rgba(254,33,78,1) 100%);
 }
 
+.search {
+  max-width: 40%;
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+}
+
+.clear-btn {
+  margin-left: 10px;
+}
+
+.playercards-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .card-img-top {
 width: 100%;
 height: 40vh;
